# synonym

./: README.md
benchmarks/arrayint-18/: ArrayInt-pick.java  ArrayInt-pick3-true-simple.java  ArrayInt-pick3-true.java
benchmarks/cav-18/choice/: Choice2.java  Choice3.java  Choice5.java  Choice6.java  Choice7.java  run-times.sh
benchmarks/chromosome-18/: Chromosome-pick.java  Chromosome-pick3-false-simple.java  Chromosome-pick3-true-simple.java  Chromosome-pick3-true.java  Chromosome-pick3.java
benchmarks/iflow-18/: PasswordSafe.java  PasswordUnsafe.java
benchmarks/iflow-18/Choice/: Choice1.java  (+2 more)
benchmarks/larger-18/: PokerHand-true-mod2.java  PokerHand-true.java  Prob.java  ProbDoubleLoop.java  ProbLoop.java  Problem1.java  descartes.prof
benchmarks/mapreduce-17/: CountMaxReducer.java  MaxReducer.java
benchmarks/mapreduce-18/: FlattenedCountMax.java
benchmarks/php-18/: PokerHand-pick.java  PokerHand-pick3-false-part2.java  PokerHand-pick3-false.java  PokerHand-pick3-true-part1.java  PokerHand-pick3-true-part2.java  run-HTC.sh  run-times.sh
benchmarks/solution-18/: Solution-pick.java  Solution-pick3-false.java  Solution-pick3-true.java
dependencies/nauty26r10/: NT.c  NT.h
descartes/: descartes.cabal
descartes/src/: Main.hs
descartes/src/Analysis/: Consolidation.hs  Engine.hs  Hoare.hs  Invariant.hs  Lockstep.hs  LockstepAS.hs  LockstepAS_LoC.hs  Product.hs  Properties.hs  SBP.hs  SBP_LoC.hs  SelfComposition.hs  Symmetry.hs  Types.hs
descartes/src/NautyTraces/: NautyTraces.hs  NautyTraces.hsc
synonym/: synonym.cabal
synonym/src/: Main.hs
(+77 files in other folders)
