Name:               descartes
Version:            0.1
Cabal-Version:      >= 1.2
Author:             Marcelo Sousa
Synopsis:           Cartesian Hoare Logic Verifier 
Description:        Cartesian Hoare Logic Verifier
Build-Type:         Simple

Executable descartes
    Main-Is:          Main.hs
    Build-Depends:    base          
                    , containers    
                    , filepath   
                    , directory
                    , mtl           
                    , cmdargs
                    , language-java
                    , z3
    extra-libraries:  nauty
    extra-lib-dirs:   ../dependencies/nauty26r10
    C-sources:        ../dependencies/nauty26r10/NT.c
    Hs-Source-Dirs:   src/
    ghc-options:      -O3 -rtsopts -prof -fprof-auto
    Extensions:       DoAndIfThenElse

